--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,11 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/$APP_NAME
+    working_directory: ~/spring-boot-crud
 
     steps:
       # ================================================== #
-      # JOB: INTEGRAÇÃO CONTÍNUA
+      # JOB: continuous integration
       # ================================================== #
 
       - checkout
@@ -47,7 +47,7 @@ jobs:
           path: target/surefire-reports
 
       - store_artifacts:
-          path: target/$APP_NAME-0.0.1-SNAPSHOT.jar
+          path: target/spring-boot-crud-0.0.1-SNAPSHOT.jar
 
   deploy:
     docker:
@@ -59,11 +59,11 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/$APP_NAME
+    working_directory: ~/spring-boot-crud
 
     steps:
       # ================================================== #
-      # JOB: ENTREGA CONTÍNUA
+      # JOB: continuous delivery
       # ================================================== #
 
       - run:
