--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@
 #
 version: 2
 jobs:
-  build:
+  cicd:
     docker:
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
@@ -60,6 +60,6 @@ jobs:
 
 workflows:
   version: 2
-  build-deploy:
+  test-build-deploy:
     jobs:
-      - build
+      - cicd
